Exception and logic

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,5 @@ spring.datasource.username=postgres
 spring.datasource.password=123
 spring.jpa.generate-ddl=true
 
-fileSize=2048
+# fileSize in Mb
+fileSize=2
