--- a/pom.xml
+++ b/pom.xml
@@ -45,14 +45,14 @@
         </dependency>
 
         <!--Web-->
-        <dependency>
+<!--        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mustache</artifactId>
-        </dependency>
+        </dependency>-->
 
         <!--Lombok-->
         <!--<dependency>
