--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.datasource.username=postgres
 spring.datasource.password=123
 spring.jpa.generate-ddl=true
 
-# fileSize in Mb
-fileSize=2
+# fileSize in Kb
+fileSize=500
