--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
         </dependency>
 
         <!--Web-->
-<!--        <dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
