--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,15 @@
+# database settings
 spring.datasource.url=jdbc:postgresql://localhost/simbirsofttask
 spring.datasource.username=postgres
 spring.datasource.password=123
 spring.jpa.generate-ddl=true
 
+# logging settings
+logstash.host=@logstash.host@
+logstash.port=@logstash.port@
+logger.console.tresholdFilter=@logger.console.tresholdFilter@
+logger.socket.tresholdFilter=@logger.socket.tresholdFilter@
+
 # fileSize in Kb
 fileSize=500
+
