--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <properties>
         <java.version>1.8</java.version>
         <testcontainers.version>1.14.3</testcontainers.version>
+        <logstash.host>logstashcsm.example.ru</logstash.host>
     </properties>
 
     <dependencies>
@@ -27,11 +28,11 @@
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
-        <!-- <dependency>
+         <dependency>
              <groupId>org.springframework.boot</groupId>
              <artifactId>spring-boot-configuration-processor</artifactId>
              <optional>true</optional>
-         </dependency>-->
+         </dependency>
 
         <!--DataBase-->
         <dependency>
@@ -48,6 +49,16 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-logging</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-log4j2</artifactId>
         </dependency>
 
         <!--Lombok-->
@@ -101,5 +112,6 @@
             </plugin>
         </plugins>
     </build>
+
 
 </project>
