--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,8 @@ spring.datasource.password=123
 spring.jpa.generate-ddl=true
 
 # logging settings
-logstash.host=@logstash.host@
-logstash.port=@logstash.port@
-logger.console.tresholdFilter=@logger.console.tresholdFilter@
-logger.socket.tresholdFilter=@logger.socket.tresholdFilter@
+logging.file.name=tasklog.log
+logging.level.root=info
 
 # fileSize in Kb
 fileSize=500
